* MULE-2162 MuleConfiguration belongs to MuleContext * MULE-2162 ThreadingProfiles are a view on the Registry
git-svn-id: https://svn.codehaus.org/mule/branches/mule-2.x@11015 bf997673-6b11-0410-b953-e057580c5b09